fix most of errors related to event

--- a/EventApp/app/src/main/res/layout/content_of_event_display_list.xml
+++ b/EventApp/app/src/main/res/layout/content_of_event_display_list.xml
@@ -18,11 +18,11 @@
 
     <TextView
         android:id="@+id/eventDate"
-        android:textColor="@color/black"
-        android:layout_width="151dp"
+        android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_marginStart="12dp"
         android:text="Event Date"
+        android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/eventImageList"
         app:layout_constraintTop_toBottomOf="@+id/eventDescription" />
 
