--- a/EventApp/app/src/main/res/layout/fragment_attendee_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_event.xml
@@ -13,7 +13,7 @@
         android:id="@+id/eventSearcher"
         android:layout_width="340dp"
         android:layout_height="32dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="102dp"
         android:background="#CAC9C9"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -26,9 +26,10 @@
 
     <ListView
         android:id="@+id/eventListView"
-        android:layout_width="match_parent"
-        android:layout_height="564dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
