--- a/EventApp/app/src/main/res/layout/fragment_attendee_event_information.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_event_information.xml
@@ -13,13 +13,13 @@
         android:id="@+id/eventTitleDescrip"
         android:layout_width="286dp"
         android:layout_height="61dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="56dp"
         android:gravity="center"
         android:text="@string/hello_blank_fragment"
         android:textColor="@color/black"
         android:textSize="27dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,10 +38,20 @@
         android:id="@+id/eventFullDescription"
         android:layout_width="362dp"
         android:layout_height="56dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="30dp"
         android:text="Event Description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintHorizontal_bias="0.53"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/attendee_event_date_time" />
+
+    <TextView
+        android:id="@+id/attendee_event_date_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="@string/event_date"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eventTitleDescrip" />
 
