--- a/EventApp/app/src/main/res/layout/fragment_organizer_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_event.xml
@@ -24,8 +24,9 @@
     <ListView
         android:id="@+id/organizer_eventListView"
         android:layout_width="match_parent"
-        android:layout_height="564dp"
+        android:layout_height="0dp"
         android:layout_marginTop="52dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/organizer_eventSearcher" />
