--- a/EventApp/app/src/main/res/navigation/organizer_nav_graph.xml
+++ b/EventApp/app/src/main/res/navigation/organizer_nav_graph.xml
@@ -59,6 +59,18 @@
         <action
             android:id="@+id/action_organizerEventInfo_to_organizerEvent"
             app:destination="@id/organizerEvent" />
+        <action
+            android:id="@+id/action_organizerEventInfo_to_organizer_edit_event_selection"
+            app:destination="@id/organizer_edit_event_selection" />
+    </fragment>
+    <fragment
+        android:id="@+id/organizer_edit_event_selection"
+        android:name="com.example.eventapp.organizer.OrganizerEditEventSelection"
+        android:label="fragment_edit_event_selection"
+        tools:layout="@layout/fragment_edit_event_selection">
+        <action
+            android:id="@+id/action_organizer_edit_event_selection_to_organizerEventInfo"
+            app:destination="@id/organizerEventInfo" />
     </fragment>
 
 </navigation>
