--- a/EventApp/app/src/main/res/layout/fragment_attendee_event_information.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_event_information.xml
@@ -13,7 +13,7 @@
         android:id="@+id/eventTitleDescrip"
         android:layout_width="286dp"
         android:layout_height="61dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="88dp"
         android:gravity="center"
         android:text="@string/hello_blank_fragment"
         android:textColor="@color/black"
@@ -25,8 +25,8 @@
 
     <ImageView
         android:id="@+id/biggerEventImage"
-        android:layout_width="362dp"
-        android:layout_height="297dp"
+        android:layout_width="320dp"
+        android:layout_height="291dp"
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -44,5 +44,30 @@
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eventTitleDescrip" />
+
+    <Button
+        android:id="@+id/signUpForEventButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:backgroundTint="@color/mainAppColor"
+        android:text="@string/sign_up_for_event"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/biggerEventImage" />
+
+    <TextView
+        android:id="@+id/alreadySigneUpTextView"
+        android:layout_width="128dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/already_signed_up"
+        android:textColor="@color/black"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signUpForEventButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
