--- a/EventApp/app/src/main/res/layout/fragment_create_notification.xml
+++ b/EventApp/app/src/main/res/layout/fragment_create_notification.xml
@@ -7,131 +7,88 @@
     tools:context=".organizer.CreateEventFragment">
 
     <TextView
-        android:id="@+id/CreateAnnouncement"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/Eventname"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CreateEventTitleText" />
-
-    <EditText
-        android:id="@+id/EditEventName"
+        android:id="@+id/CreateAnnouncementTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:background="@drawable/edittext_frame"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CreateAnnouncement" />
-
-    <TextView
-        android:id="@+id/CreateEventDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/create_EventDate"
-        app:layout_constraintStart_toStartOf="@+id/EditEventName"
-        app:layout_constraintTop_toBottomOf="@+id/EditEventName" />
-
-    <EditText
-        android:id="@+id/EditEventDate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:background="@drawable/edittext_frame"
-        android:inputType="date"
-        android:drawableEnd="@drawable/ic_date_calendar"
-        app:layout_constraintTop_toBottomOf="@+id/CreateEventDate"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:focusable="false"
-        android:clickable="true"
-        android:cursorVisible="false"
-        />
-
-
-    <TextView
-        android:id="@+id/CreateEventDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/create_event_description"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditEventDate" />
-
-    <EditText
-        android:id="@+id/EditEventDescription"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginHorizontal="16dp"
-        android:background="@drawable/edittext_frame"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CreateEventDescription" />
-
-    <Button
-        android:id="@+id/buttonArrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="93dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:drawableStart="@drawable/baseline_arrow_back_24"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:text="@string/Previous"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EventImageView" />
-
-    <Button
-        android:id="@+id/buttonConfirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="91dp"
-        android:layout_marginEnd="30dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:text="@string/Confirm"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EventImageView" />
-
-    <TextView
-        android:id="@+id/CreateEventTitle"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:text="@string/create_event_text"
+        android:layout_marginTop="16dp"
+        android:text="@string/create_announcement_text"
         android:textColor="@color/black"
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/CreateEventTitleText"
-        android:layout_width="375dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/create_event_title_text"
-        android:textColor="@color/gray"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CreateEventTitle" />
-
-    <ImageView
-        android:id="@+id/EventImageView"
+        android:id="@+id/CreateAnnouncementDescription"
         android:layout_width="0dp"
-        android:layout_height="118dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="180dp"
+        android:text="@string/create_announcement_description"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/CreateAnnouncementTitle" />
+
+    <EditText
+        android:id="@+id/EditEventDescription"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_frame"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:onClick="pickImage"
-        app:layout_constraintTop_toBottomOf="@+id/EditEventDescription"
-        android:src="@drawable/ic_upload" />
+        app:layout_constraintTop_toBottomOf="@id/CreateAnnouncementDescription" />
+
+    <Button
+        android:id="@+id/buttonArrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:drawableStart="@drawable/baseline_arrow_back_24"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:text="@string/Back"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/EditEventDescription" />
+
+    <Button
+        android:id="@+id/buttonConfirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="16dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:text="@string/Confirm"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/EditEventDescription" />
+
+    <TextView
+        android:id="@+id/selectEventTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:text="Select Event"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@+id/CreateAnnouncementTitle"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Spinner
+        android:id="@+id/eventSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/events"
+        android:padding="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/EditEventDescription"
+        app:layout_constraintTop_toBottomOf="@+id/selectEventTextView"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
