--- a/EventApp/app/src/main/res/layout/fragment_qrcode_info.xml
+++ b/EventApp/app/src/main/res/layout/fragment_qrcode_info.xml
@@ -41,8 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_share_qrcode"
-        app:srcCompat="@drawable/ic_qrcode" /> <!-- Replace with your QR code drawable -->
+        app:layout_constraintTop_toBottomOf="@+id/btn_share_qrcode" />
 
 
 
