--- a/EventApp/app/src/main/res/navigation/organizer_nav_graph.xml
+++ b/EventApp/app/src/main/res/navigation/organizer_nav_graph.xml
@@ -74,6 +74,9 @@
         <action
             android:id="@+id/action_organizer_edit_event_selection_to_organizer_qrcode"
             app:destination="@id/organizer_qrcode" />
+        <action
+            android:id="@+id/action_organizer_edit_event_selection_to_organizer_attendees_list"
+            app:destination="@id/organizer_attendees_list" />
     </fragment>
     <fragment
         android:id="@+id/organizer_qrcode"
@@ -84,6 +87,19 @@
             android:id="@+id/action_organizer_qrcode_to_organizer_edit_event_selection"
             app:destination="@id/organizer_edit_event_selection" />
     </fragment>
+
+    <fragment
+        android:id="@+id/organizer_attendees_list"
+        android:name="com.example.eventapp.organizer.OrganizerSeeListOfAttendees"
+        android:label="fragment_list_of_attendees"
+        tools:layout="@layout/fragment_list_of_attendees" >
+
+        <!-- Define other actions and fragments if needed -->
+        <action
+            android:id="@+id/action_organizer_attendees_list_to_organizer_edit_event_selection"
+            app:destination="@id/organizer_edit_event_selection" />
+    </fragment>
+
 
 
 </navigation>
