--- a/EventApp/app/src/main/res/layout/activity_create_notification_event_list.xml
+++ b/EventApp/app/src/main/res/layout/activity_create_notification_event_list.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".attendee.AttendeeEvent">
 
+    <fragment
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/organizer_nav_graph" />
+
     <ListView
         android:id="@+id/organizer_eventListView"
         android:layout_width="match_parent"
