--- a/EventApp/app/src/main/res/layout/fragment_attendee_location.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_location.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/organizer_event_map"
+    android:id="@+id/attendee_location"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".geoLocation.EventMap">
+    tools:context=".geoLocation.EventUserLocation">
 
 
     <TextView
