--- a/EventApp/app/src/main/res/layout/fragment_attendee_event_information.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_event_information.xml
@@ -55,4 +55,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eventTitleDescrip" />
 
+    <Button
+        android:id="@+id/btn_checkin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/check_in"
+        android:background="@drawable/rounded_button_background"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/biggerEventImage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
