--- a/EventApp/app/src/main/res/navigation/attendee_nav_graph.xml
+++ b/EventApp/app/src/main/res/navigation/attendee_nav_graph.xml
@@ -18,6 +18,9 @@
         <action
             android:id="@+id/action_attendeeHome_to_attendeeNotification"
             app:destination="@id/attendeeNotification" />
+        <action
+            android:id="@+id/action_attendeeHome_to_attendeeQRCodeScan"
+            app:destination="@id/attendeeQRCodeScan" />
     </fragment>
     <fragment
         android:id="@+id/attendeeEventMenu"
@@ -45,5 +48,20 @@
         <action
             android:id="@+id/action_attendeeEventInformation_to_attendeeEvent"
             app:destination="@id/attendeeEventMenu" />
+    </fragment>
+    <fragment
+        android:id="@+id/attendeeQRCodeScan"
+        android:name="com.example.eventapp.attendee.QRCodeScanFragment"
+        android:label="fragment_attendee_qr_code_scan"
+        tools:layout="@layout/fragment_qr_code_scan" >
+        <argument
+            android:name="eventId"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_attendeeQRCodeScan_to_attendeeHome"
+            app:destination="@id/attendeeHome" />
+        <action
+            android:id="@+id/action_attendeeQRCodeScan_to_attendeeEventInformation"
+            app:destination="@id/attendeeEventInformation" />
     </fragment>
 </navigation>
