Notification Page for Attendee Complete with Tests

--- a/EventApp/app/src/main/res/layout/fragment_attendee_notification.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_notification.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,15 +8,7 @@
         android:id="@+id/AttendeeNotificationListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible" />
-
-    <!-- TextView for "No Notification at this time" -->
-    <TextView
-        android:id="@+id/noNotifyText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/no_notification_at_this_time"
-        android:layout_centerInParent="true"
         android:visibility="visible" />
+
 
 </RelativeLayout>
