--- a/EventApp/app/src/main/res/drawable/ic_upload.xml
+++ b/EventApp/app/src/main/res/drawable/ic_upload.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="14dp"
-    android:height="14dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
         android:fillColor="@color/gray"
-        android:pathData="M19,9h-4V3H9v6H5l7,7l7-7zM5,18v2h14v-2H5z"/>
+        android:pathData="M5,20h14v-2H5v2zM12,2l-5.5,5.5h3.5v7h4v-7h3.5L12,2z"/>
 </vector>
