--- a/EventApp/app/src/main/res/layout/fragment_list_of_attendees.xml
+++ b/EventApp/app/src/main/res/layout/fragment_list_of_attendees.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/notify_attendees"
-        android:backgroundTint="@color/design_default_color_primary"
+        android:background="@drawable/rounded_button_background"
         android:textColor="@android:color/white"
         android:layout_marginBottom="16dp" />
 
