--- a/EventApp/app/src/main/res/layout/fragment_create_notification.xml
+++ b/EventApp/app/src/main/res/layout/fragment_create_notification.xml
@@ -22,8 +22,8 @@
         android:id="@+id/CreateAnnouncementDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="28dp"
         android:text="@string/create_announcement_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/CreateAnnouncementTitle" />
@@ -31,14 +31,18 @@
     <EditText
         android:id="@+id/EditEventDescription"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="500dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/edittext_frame"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/CreateAnnouncementDescription" />
+        app:layout_constraintTop_toBottomOf="@id/CreateAnnouncementDescription"
+        app:layout_constraintVertical_bias="0.517" />
 
     <Button
         android:id="@+id/buttonArrow"
@@ -66,32 +70,6 @@
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EditEventDescription" />
-
-    <TextView
-        android:id="@+id/selectEventTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:paddingStart="16dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:text="@string/select_events"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/CreateAnnouncementTitle"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <Button
-        android:id="@+id/selectEventsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_button_background"
-        android:text="@string/select_events"
-        android:textColor="#FFFFFF"
-        android:textColorLink="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/CreateAnnouncementDescription"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selectEventTextView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
