--- a/EventApp/app/src/main/res/layout/content_of_event_display_list.xml
+++ b/EventApp/app/src/main/res/layout/content_of_event_display_list.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
         android:text="Event Description"
-        app:layout_constraintStart_toEndOf="@+id/eventImageList"
+        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -23,8 +23,9 @@
         android:layout_marginStart="12dp"
         android:text="Event Date"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@+id/eventImageList"
+        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
         app:layout_constraintTop_toBottomOf="@+id/eventDescription" />
+
 
     <Button
         android:id="@+id/btnViewEvent"
@@ -37,8 +38,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <ImageView
-        android:id="@+id/eventImageList"
+        android:id="@+id/userProfileImage"
         android:layout_width="59dp"
         android:layout_height="64dp"
         android:layout_marginStart="16dp"
@@ -46,4 +48,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
