--- a/EventApp/app/src/main/res/layout/fragment_organizer_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_event.xml
@@ -12,10 +12,10 @@
         android:layout_height="32dp"
         android:layout_marginTop="52dp"
         android:background="#CAC9C9"
-        android:visibility="visible"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        app:iconifiedByDefault="false"
+        android:iconifiedByDefault="false"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
