--- a/EventApp/app/src/main/res/navigation/organizer_nav_graph.xml
+++ b/EventApp/app/src/main/res/navigation/organizer_nav_graph.xml
@@ -96,6 +96,8 @@
         <action
             android:id="@+id/action_organizer_edit_event_selection_to_organizer_update_event"
             app:destination="@id/organizer_update_event" />
+        <action android:id="@+id/action_organizer_edit_event_selection_to_organizer_event_map"
+            app:destination="@id/organizer_event_map" />
     </fragment>
     <fragment
         android:id="@+id/organizer_qrcode"
@@ -126,6 +128,17 @@
             app:destination="@id/organizer_edit_event_selection" />
     </fragment>
 
+    <fragment
+        android:id="@+id/organizer_event_map"
+        android:name="com.example.eventapp.geoLocation.EventMap"
+        android:label="fragment_event_map"
+        tools:layout="@layout/fragment_organizer_event_map" >
+
+        <action
+            android:id="@+id/action_organizer_event_map_to_organizer_edit_event_selection"
+            app:destination="@id/organizer_edit_event_selection" />
+
+    </fragment>
 
 
 </navigation>
