--- a/EventApp/app/src/main/res/layout/content_of_event_display_list.xml
+++ b/EventApp/app/src/main/res/layout/content_of_event_display_list.xml
@@ -32,9 +32,9 @@
         android:layout_width="100dp"
         android:layout_height="41dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="35dp"
         android:text="@string/select"
-        android:textColor="@color/white"
+        android:backgroundTint="#FFDB58"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
