--- a/EventApp/app/src/main/res/layout/content_profile_display.xml
+++ b/EventApp/app/src/main/res/layout/content_profile_display.xml
@@ -29,11 +29,13 @@
 
     <Button
         android:id="@+id/btnViewProfile"
-        android:layout_width="70dp"
-        android:layout_height="48dp"
-        android:textColor="@color/white"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="44dp"
+        android:layout_width="60dp"
+        android:layout_height="35sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="24sp"
+        android:textSize="12sp"
+        android:backgroundTint="#FFDB58"
         android:text="View"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
