--- a/EventApp/app/src/main/res/layout/fragment_organizer_attendee_list.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_attendee_list.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/notify_attendees"
-        android:background="@drawable/rounded_button_background"
+        android:backgroundTint="@color/design_default_color_primary"
         android:textColor="@android:color/white"
         android:layout_marginBottom="16dp" />
 
