--- a/EventApp/app/src/main/res/layout/attended_event_list.xml
+++ b/EventApp/app/src/main/res/layout/attended_event_list.xml
@@ -7,10 +7,11 @@
 
     <ListView
         android:id="@+id/listViewAttendedEvents"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
