--- a/EventApp/app/src/main/res/layout/fragment_organizer_event_info.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_event_info.xml
@@ -23,8 +23,8 @@
 
     <ImageView
         android:id="@+id/organizer_biggerEventImage"
-        android:layout_width="319dp"
-        android:layout_height="224dp"
+        android:layout_width="305dp"
+        android:layout_height="208dp"
         android:layout_marginTop="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.53"
@@ -64,7 +64,7 @@
         android:id="@+id/button_editEvent_info"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/rounded_button_background"
         android:paddingHorizontal="16dp"
         android:text="@string/edit_event"
@@ -78,7 +78,7 @@
         android:id="@+id/btn_reuse_qrcode"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/rounded_button_background"
         android:paddingHorizontal="16dp"
         android:text="REUSE QR CODE"
@@ -92,9 +92,12 @@
         android:id="@+id/realTimeScanBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="576dp"
-        android:text="Button"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="544dp"
+        android:background="@drawable/rounded_button_background"
+        android:paddingHorizontal="16dp"
+        android:text="@string/real_time_reuse_qr_code"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" /> <!-- Adjusted to 45% to leave space between buttons -->
 
