--- a/EventApp/app/src/main/res/layout/fragment_qr_code_scan.xml
+++ b/EventApp/app/src/main/res/layout/fragment_qr_code_scan.xml
@@ -21,23 +21,27 @@
 
     <Button
         android:id="@+id/btn_scan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_width="268dp"
+        android:layout_height="132dp"
+        android:layout_marginTop="64dp"
         android:background="@drawable/rounded_button_background"
         android:text="@string/scan"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scanTitle" />
 
     <Button
         android:id="@+id/testButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="268dp"
+        android:layout_height="132dp"
         android:layout_marginTop="98dp"
-        android:text="Button"
+        android:textSize="24sp"
+        android:background="@drawable/rounded_button_background"
+        android:textColor="@color/white"
+        android:text="@string/real_time_scanner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_scan" />
