--- a/EventApp/app/src/main/res/layout/fragment_qrcode_info.xml
+++ b/EventApp/app/src/main/res/layout/fragment_qrcode_info.xml
@@ -11,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="QR CODE FOR CHECKIN"
+        android:text="@string/qr_code_for_checkin"
         android:textColor="@color/black"
-        android:textSize="34sp"
+        android:textSize="29sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
